@@ -1,3 +1,8 @@
+2013-06-13  Albert Krewinkel  <tarleb@moltkeplatz.de>
+
+	* sieve.el: Rebind q to (sieve-bury-buffer), bind Q to
+	(sieve-manage-quit).
+
 2013-06-13  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
 	* shr.el (shr-expand-url): Expansion should chop off the bits after the
